good as it's gonna get

--- a/aa-employee-travel-buddy/src/pages/StandbyPredictor.css
+++ b/aa-employee-travel-buddy/src/pages/StandbyPredictor.css
@@ -32,3 +32,12 @@
     width: 400px;
     border-radius: 20%;
 }
+
+
+.info{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 30%;
+    justify-content: center;
+}
